@@ -2,6 +2,8 @@ rootskel (1.03) UNRELEASED; urgency=low
 
   * Jim Lieb
     - Add 2.6 kernels to ia64 build
+  * Martin Michlmayr
+    - Load framebuffer modules for sb1-swarm-bn on mips/mipsel.
 
  -- dann frazier <dannf@debian.org>  Wed, 15 Sep 2004 20:12:16 -0600
 
